# team-builder

./: Cargo.toml  LICENSE  README.md  sample.xlsx  table.html  test.xlsx
resources/: pokemons.csv  pokemons_short.csv  students.csv  test.csv  test_same_values.csv  test_uneven.csv
src/: builder.rs  csv_exporter.rs  html_exporter.rs  main.rs  spreadsheet_exporter.rs  tests.rs  ui.rs
