[package]
name = "team-builder"
version = "0.1.0"
authors = ["Giorgio Pomettini <giorgio.pomettini@gmail.com>"]
edition = "2018"

[dependencies]
csv = ">=1"
serde = ">=1.0.91"
serde_derive = ">=1.0.92"
strum = ">=0.15.0"
strum_macros = ">=0.15.0"
iui = { git = "https://github.com/rust-native-ui/libui-rs.git" }
itertools = ">=0.8.0"